# life

./: .gitignore  .replit  CHECKSUMS.md  CLEANUP_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  EMAIL_SETUP.md  FUNCTIONALITY_DESCRIPTION.md  INSTALLATION_GUIDE.md  INSTALLATION_GUIDE_LOCAL.md  ISTRUZIONI_SETUP.md  OPTIMIZATION_REPORT.md  PACKAGE_CONTENTS.md  PACKAGE_CONTENTS_ZIP.md  PERMISSION_STANDARDIZATION_SUMMARY.md  README.md  README_DATABASE_CREATION.md  README_DATABASE_FIXES.md  README_INSTALLATION.md  README_INSTALLAZIONE_LOCALE.md  SCHEMA_ALIGNMENT_REPORT.md  TEST_LOGIN_CREDENTIALS.md  VERSION.md  aci_table.csv  add_all_sedi_field.py  add_time_fields_to_leave_request.py  all_routes.txt  api_routes.py  api_routes_backup.py  api_routes_old.py  api_routes_simple.py  app.py  attendance_event.csv  backfill_remaining_models.py  blueprint_functions.txt  cli_commands.py  config.py  constants.py  cookies.txt  create_database.py  (+103 more)
attached_assets/: Copia di NS12_PERSONALE_Completo_1761319457802.xlsx  Pasted-2025-09-04-08-29-09-187-app-ERROR-Exception-on-dashboard-GET-Traceback-most-recent-call-la-1756974625486_1756974625487.txt  Pasted-Analizza-in-modo-approfondito-tutto-il-codice-presente-nel-progetto-Il-tuo-obiettivo-ottimizzare--1753803299897_1753803299898.txt  Pasted-Analizza-in-modo-approfondito-tutto-il-codice-presente-nel-progetto-Il-tuo-obiettivo-ottimizzare--1753896517301_1753896517301.txt  Pasted-DEBUG-Trovate-1-richieste-per-utente-3-DEBUG-Richiesta-1-route-addresses-type-class-list-DE-1753975340378_1753975340378.txt  Plug-in-IN_1753950765086.xlsx  (+12 more)
blueprints/: hr.py  (+45 more)
(+343 files in other folders)
