[project]
name = "flow"
version = "1.0.0"
description = "Workforce Management Platform"
authors = [
    {name = "Flow Team", email = "info@flow.com"}
]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "Flask-WTF>=1.2.1",
    "WTForms>=3.1.1",
    "email-validator>=2.1.0",
    "Werkzeug>=3.0.1",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
    "qrcode>=7.4.2",
    "Pillow>=10.1.0",
    "reportlab>=4.0.7",
    "defusedcsv>=2.0.0",
    "PyJWT>=2.8.0",
    "SQLAlchemy>=2.0.23"
]

[project.urls]
Homepage = "https://github.com/flow/workforce-management"
Repository = "https://github.com/flow/workforce-management"

[tool.setuptools]
packages = ["flow"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"